--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <link rel="icon" href="https://www.powayusd.com/getmedia/ab8dcd57-c509-47ea-b0db-28d2c5769a02/wvhsLogo_2.aspx?width=123&height=100&ext=.png">
 
   <p>website under construction</p> 
-  <img src = "Personal_Artifact.png">
+  <img src = "Personal Artifact.png">
 
 
 </html>
