--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <html>
+  <head>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="icon" href="https://www.powayusd.com/getmedia/ab8dcd57-c509-47ea-b0db-28d2c5769a02/wvhsLogo_2.aspx?width=123&height=100&ext=.png">
-
+  </head>
+  
+  <body>
   <p>website under construction</p> 
-  <img src = "Personal_Artifact.png", length: 50px>
-
+  <center>
+  <style> 
+  <img src = "Personal_Artifact.png" width = "200">
+    </style> 
+    </center>
+  </body>
 
 </html>
