--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <body>
   <p>website under construction</p> 
   <center>
-  <style> 
-  <img src = "Personal_Artifact.png" width = "200">
-    </style> 
+  <img src = "Personal_Artifact.png">
     </center>
   </body>
 
