--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
   <p>website under construction</p> 
   <center>
-  <img src = "Personal Artifact.png">
+  <img src = "Personal_Artifact.png">
     </center>
   </body>
 
