--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
   <p>website under construction</p> 
   <center>
-  <img src="Personal Artifact.png">
+  <img src="Personal Artifact.png" width = "50">
     </center>
   </body>
 
