copied from code pen

--- a/noun.html
+++ b/noun.html
@@ -9,7 +9,7 @@
 <body>
   <nav>
     <li class="nav"><a href ="index.html">Home</a></li>
-    <li class="nav"><a href = "PLACEHOLDER"> something </a></li>
+    <li class="nav"><a href = "noun.html"> Noun </a></li>
   </nav>
   <br>
   <br>
@@ -50,5 +50,93 @@
   <div>
   <img src = "https://ychef.files.bbci.co.uk/976x549/p02lr4xh.jpg" class = "org">
   </div>
-</body>
+    </body>
 </html>
+
+  <style>
+h1 {
+  color: #765379;
+  text-align: center;
+  text-decoration: overline;
+  background-color: blue;
+  opacity: 0.3;
+}
+
+h1:hover{
+  background-color: #56A3A6;
+}
+
+body {
+  background-color: #56A3A6;
+}
+
+.gallery{
+  margin: 15px; 
+  float: left;
+  border: 15px; 
+  width: 345px;
+  height: 300px;
+}
+
+.text{
+  margin: 15px; 
+  float: left;
+  border: 15px; 
+  width: 345px;
+  height: 300px;
+  opacity: 0;
+}
+
+.gallery:hover .text{
+  font-size: 20px;
+  color: #564256;
+  opacity: 1; 
+}
+
+.gallery:hover {
+  opacity: 0.6;
+}
+
+.text{
+  font-size: 20px;
+  color: #CAD49D;
+  display: block;
+}
+
+.org {
+  margin: 15px;
+  float: left;
+}
+
+.org:hover {
+  opacity: 0.45;
+}
+
+.org2 {
+  width: 450px;
+  height: 300px;
+  margin: 15px;
+}
+
+nav {
+  list-style-type: none; 
+  position: fixed;
+  background-color: #564256;
+  width: 100%;
+  left: 0; 
+  top: 0; 
+}
+
+.nav {
+  display: inline; 
+  float: left; 
+  padding: 20px;
+  margin: 4x;
+}
+
+a {
+  text-decoration: none; 
+  color: #56A3A6;
+  font-size: 120%;
+}
+  </style>
