--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   </head>
   
   <body>
+  <nav>
+    <li class="nav"><a href ="index.html">Home</a></li>
+    <li class="nav"><a href = "noun.html"> Noun </a></li>
+  </nav>
   <p>website under construction</p> 
   <center>
   <img src="Personal Artifact.png" width = "50">
