--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
   <img src="Personal Artifact.png" width = "50">
     </center>
   </body>
-
+  
+  <style>
+    body{
+      background-color: #564256;
+    }
+  </style>
 </html>
