--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </nav>
   <p>website under construction</p> 
   <center>
-  <img src="Personal Artifact.png">
+  <img src="Personal Artifact.png" width = "50">
     </center>
   </body>
 </html>
@@ -21,8 +21,5 @@
   <style>
     body{
       background-color: #564256;
-    }
-    img{
-      width = 50%;
     }
   </style>
