--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </nav>
   <p>website under construction</p> 
   <center>
-  <img src="Personal Artifact.png" width = "100">
+  <img src="Personal Artifact.png">
     </center>
   </body>
 </html>
@@ -24,29 +24,29 @@
     }
     
     nav {
-  list-style-type: none; 
-  position: fixed;
-  background-color: #564256;
-  width: 100%;
-  left: 0; 
-  top: 0; 
-}
+      list-style-type: none; 
+      position: fixed;
+      background-color: #564256;
+      width: 100%;
+      left: 0; 
+      top: 0; 
+   }
 
-.nav {
-  display: inline; 
-  float: left; 
-  padding: 20px;
-  margin: 4x;
-}
+    .nav {
+      display: inline; 
+      float: left; 
+      padding: 20px;
+      margin: 4x;
+    }
 
-a {
-  text-decoration: none; 
-  color: #56A3A6;
-  font-size: 120%;
-}
+     a {
+      text-decoration: none; 
+      color: #56A3A6;
+      font-size: 120%;
+    }
 
-.nav:hover {
-  background-color: #DDA3B2;
-}
+    .nav:hover {
+      background-color: #DDA3B2;
+    }
 
   </style>
