--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </nav>
   <p>website under construction</p> 
   <center>
-  <img src="Personal Artifact.png">
+  <img src="Personal Artifact.png" width = "50">
     </center>
   </body>
 </html>
