--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
       background-color: #564256;
     }
     
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+    
     nav {
       list-style-type: none; 
       position: fixed;
