--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <nav>
     <li class="nav"><a href ="index.html">Home</a></li>
     <li class="nav"><a href = "noun.html"> Noun </a></li>
-    <li class="nav"><a href = "convince.html> Convince Project </a></li>
+    <li class="nav"><a href = "convince.html"> Convince Project </a></li>
   </nav>
   <p>website under construction</p> 
   <center>
