--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <li class="nav"><a href ="index.html">Home</a></li>
     <li class="nav"><a href = "noun.html"> Noun </a></li>
     <li class="nav"><a href = "convince.html"> Convince Project </a></li>
+    <li class="nav"><a href - "event/index.html"> Event </a></li>
   </nav>
   <p>website under construction</p> 
   <center>
