--- a/food.html
+++ b/food.html
@@ -118,7 +118,7 @@
       Lychee Oolong Milk Tea, $7.00
     </div>
     <div class="box h">
-      <img src = "https://bonteacafe.com/media/bontea/media/2020/07/11/taro.jpg" width = "90%">
+      <img src = "https://media-cdn.tripadvisor.com/media/photo-m/1280/1b/38/a4/0b/taro-milk-slush-bubble.jpg" width = "90%">
       Taro Milk Slushie $6.50
     </div>
     <div class="box i">
