--- a/food.html
+++ b/food.html
@@ -211,13 +211,14 @@
 /* grid area: row line, column line, row end, column end */
 
 .logo {
+  position: relative;
   left: 120px; 
 }
 
 .img1 {
   position: relative; 
   left: 375px;
-  top: -831px; 
+  top: -840px; 
 }
 
 nav {
