--- a/food.html
+++ b/food.html
@@ -211,6 +211,7 @@
 .img1 {
   position: relative; 
   left: 375px;
+  top: -700px;
 }
 
 nav {
@@ -220,7 +221,6 @@ nav {
   width: 100%;
   left: 0; 
   top: 0; 
-  transition: top 0.3s;
 }
 
 .nav {
