--- a/food.html
+++ b/food.html
@@ -209,8 +209,9 @@
 /* grid area: row line, column line, row end, column end */
 
 .img1 {
-  position: relative; 
-  left: 375px;
+  position: absolute; 
+  left: 1000px;
+  top: 100px;
 }
 
 nav {
