--- a/food.html
+++ b/food.html
@@ -144,6 +144,7 @@
     border-radius: 5px;
     padding: 20px;
     font-size: 150%;
+    margin: 40px;
   }
 
   .box .box {
@@ -205,7 +206,7 @@
 .img1 {
   position: absolute; 
   left: 1450px;
-  top: 100px;
+  top: 150px;
 }
 
 nav {
