--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <li class="nav"><a href = "convince.html"> Convince Project </a></li>
     <li class="nav"><a href = "food.html"> Food Site </a></li>
     <li class="nav"><a href = "event/index.html"> Event </a></li>
+    <li class="nav"><a href = "final.html"> Final </a></li>
   </nav>
   <p>website under construction</p> 
   <center>
