--- a/final.html
+++ b/final.html
@@ -38,7 +38,7 @@
     </div>
   </div>
   <div class="item"><i>"Flying High!"</i> - Ms. Neumann</div>
-  <div class="item">Meals/Food Options <br> Catering available. Champagne/wine served upon request. <img src = "https://imageio.forbes.com/blogs-images/douggollan/files/2015/07/Screen-Shot-2015-07-21-at-8.13.51-PM.jpg?fit=bounds&format=jpg&width=960"> <img src = "https://imageio.forbes.com/blogs-images/douggollan/files/2015/07/Screen-Shot-2015-07-21-at-8.15.22-PM.jpg?fit=bounds&format=jpg&width=960">
+  <div class="item">Meals/Food Options <br> Catering available. Champagne/wine served upon request. <br> <img src = "https://imageio.forbes.com/blogs-images/douggollan/files/2015/07/Screen-Shot-2015-07-21-at-8.13.51-PM.jpg?fit=bounds&format=jpg&width=960"> <img src = "https://imageio.forbes.com/blogs-images/douggollan/files/2015/07/Screen-Shot-2015-07-21-at-8.15.22-PM.jpg?fit=bounds&format=jpg&width=960">
   <br> Water, coffee, juice, cookies, and almonds are free of charge. An office for meetings, Hulu, Netflix, and wifi are also available free of charge.</div>
   <div class="item">
     <p>Flight Crew</p>
