--- a/final.html
+++ b/final.html
@@ -20,7 +20,7 @@
 </div>
     </center>
 </div>
-  <div class="item" style="background-color: #00008B;color = beige;">Hello!
+  <div class="item" style="background-color: #00008B;color: beige;">Hello!
   Flights are open for request. Pricing Packages are $3000 for 3 hours and $4500 for 5 hours. Join our mailing list for more information!
   <br>Address: 13500 Wolverine Way
   <br>
@@ -37,7 +37,7 @@
     <img src = "https://cf.bstatic.com/xdata/images/hotel/max500/263858373.jpg?k=1818a9f40dbf631c2870111510af6d1eee39fd366d246da6a0b0875f1c87066a&o=&hp=1"><br>Las Vegas 
     </div>
   </div>
-  <div class="item" style="background-color: #00008B;color = beige;"><i>"Flying High!"</i> - Ms. Neumann</div>
+  <div class="item" style="background-color: #00008B;color: beige;"><i>"Flying High!"</i> - Ms. Neumann</div>
   <div class="item">Meals/Food Options <br> Catering available. Champagne/wine served upon request. <br> <img src = "https://imageio.forbes.com/blogs-images/douggollan/files/2015/07/Screen-Shot-2015-07-21-at-8.13.51-PM.jpg?fit=bounds&format=jpg&width=960"> <img src = "https://imageio.forbes.com/blogs-images/douggollan/files/2015/07/Screen-Shot-2015-07-21-at-8.15.22-PM.jpg?fit=bounds&format=jpg&width=960">
   <br> Water, coffee, juice, cookies, and almonds are free of charge. An office for meetings, Hulu, Netflix, and wifi are also available free of charge.</div>
   <div class="item">
