--- a/final.html
+++ b/final.html
@@ -1,3 +1,11 @@
+<head>
+  <li class="nav"><a href="../index.html">Home</a></li>
+  <li class="nav"><a href = "#a">Register!</a></li>
+  <li class="nav"><a href = "#b">Locations</a></li>
+  <li class="nav"><a href = "#c"> Meals/Food options </a></li>
+  <li class="nav"><a href = "#d"> Staff </a></li>
+</head>
+
 <div class="container">
   <div class="item">
   <center>
@@ -20,13 +28,13 @@
 </div>
     </center>
 </div>
-  <div class="item" style="background-color: #00008B;color: beige;">Hello!
+  <div class="item" style="background-color: #00008B;color: beige;" id = "a">Hello!
   Flights are open for request. Pricing Packages are $3000 for 3 hours and $4500 for 5 hours. Join our mailing list for more information!
   <br>Address: 13500 Wolverine Way
   <br>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSebqphgjSbSaCZEnXUAN4JXIxaiSh4oj5mdWq2iLshIxR68ow/viewform?embedded=true" width="640" height="407" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </div>
-  <div class="item">Locations <br> <br>
+  <div class="item" id = "b">Locations <br> <br>
    <div class = "gallery">
    <img src = "https://media.architecturaldigest.com/photos/56a29165883e5aaf0648d83e/4:3/w_768/LA-package.jpg"><br>LA
     </div>
@@ -38,9 +46,9 @@
     </div>
   </div>
   <div class="item" style="background-color: #00008B;color: beige;"><i>"Flying High!"</i> - Ms. Neumann</div>
-  <div class="item">Meals/Food Options <br> Catering available. Champagne/wine served upon request. <br> <img src = "https://imageio.forbes.com/blogs-images/douggollan/files/2015/07/Screen-Shot-2015-07-21-at-8.13.51-PM.jpg?fit=bounds&format=jpg&width=960"> <img src = "https://imageio.forbes.com/blogs-images/douggollan/files/2015/07/Screen-Shot-2015-07-21-at-8.15.22-PM.jpg?fit=bounds&format=jpg&width=960">
+  <div class="item" id = "c">Meals/Food Options <br> Catering available. Champagne/wine served upon request. <br> <img src = "https://imageio.forbes.com/blogs-images/douggollan/files/2015/07/Screen-Shot-2015-07-21-at-8.13.51-PM.jpg?fit=bounds&format=jpg&width=960"> <img src = "https://imageio.forbes.com/blogs-images/douggollan/files/2015/07/Screen-Shot-2015-07-21-at-8.15.22-PM.jpg?fit=bounds&format=jpg&width=960">
   <br> Water, coffee, juice, cookies, and almonds are free of charge. An office for meetings, Hulu, Netflix, and wifi are also available free of charge.</div>
-  <div class="item">
+  <div class="item" id = "d">
     <p>Flight Crew</p>
     <div class = "gallery">
     <img src = "https://www.powayusd.com/PUSD/media/WVHS/images/Staff/TinaZiegler.jpg"> <br> Tina Ziegler - Pilot
