--- a/final.html
+++ b/final.html
@@ -100,6 +100,32 @@ button {
   margin: 15px;
 }
 
+nav {
+  list-style-type: none; 
+  position: fixed; 
+  left: 0; 
+  top: 0; 
+  transition: top 0.3s;
+}
+
+.nav {
+  display: inline; 
+  float: left; 
+  padding: 20px;
+  margin: 4px;
+}
+
+a {
+  text-decoration: none; 
+  color: #56A3A6;
+  font-size: 120%;
+  font-family: serif, Times New Roman;
+}
+
+.nav:hover {
+  background-color: #EB6123;
+}
+  
   @media(max-width:950px){.gallery{float:none;}}
 </style>
 
