--- a/final.html
+++ b/final.html
@@ -123,7 +123,7 @@ a {
 }
 
 .nav:hover {
-  background-color: #EB6123;
+  background-color: #ADD8E6;
 }
   
   @media(max-width:950px){.gallery{float:none;}}
