--- a/final.html
+++ b/final.html
@@ -1,9 +1,11 @@
 <head>
-  <li class="nav"><a href="../index.html">Home</a></li>
-  <li class="nav"><a href = "#a">Register!</a></li>
-  <li class="nav"><a href = "#b">Locations</a></li>
-  <li class="nav"><a href = "#c"> Meals/Food options </a></li>
-  <li class="nav"><a href = "#d"> Staff </a></li>
+  <nav>
+    <li class="nav"><a href="../index.html">Home</a></li>
+    <li class="nav"><a href = "#a">Register!</a></li>
+    <li class="nav"><a href = "#b">Locations</a></li>
+    <li class="nav"><a href = "#c"> Meals/Food options </a></li>
+    <li class="nav"><a href = "#d"> Staff </a></li>
+  </nav>
 </head>
 
 <div class="container">
