--- a/final.html
+++ b/final.html
@@ -1,6 +1,6 @@
 <head>
   <nav>
-    <li class="nav"><a href="../index.html">Home</a></li>
+    <li class="nav"><a href= "index.html">Home</a></li>
     <li class="nav"><a href = "#a">Register!</a></li>
     <li class="nav"><a href = "#b">Locations</a></li>
     <li class="nav"><a href = "#c"> Meals/Food options </a></li>
