--- a/team/main.html
+++ b/team/main.html
@@ -1,7 +1,7 @@
 <html>
    placeholder for team home page
    
-  <a href="">back to home using permalink</a>
+  <a href="https://github.com/WVCS/index-liux5639/blob/070f5ad9adcee99747b985e3b0d20cfd27d6a365/index.html">back to home using permalink</a>
   
   <br>
   
