--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   </head>
   
   <body>
-  <nav>
+  <nav> 
     <li class="nav"><a href ="index.html">Home</a></li>
     <li class="nav"><a href = "noun.html"> Noun </a></li>
     <li class="nav"><a href = "convince.html"> Convince Project </a></li>
     <li class="nav"><a href = "food.html"> Food Site </a></li>
     <li class="nav"><a href = "event/index.html"> Event </a></li>
     <li class="nav"><a href = "final.html"> Final </a></li>
+    <li class="nav"><a href = "team/main.html"> Final </a></li>
   </nav>
   <p>website under construction</p> 
   <center>
