--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <li class="nav"><a href = "food.html"> Food Site </a></li>
     <li class="nav"><a href = "event/index.html"> Event </a></li>
     <li class="nav"><a href = "final.html"> Final </a></li>
-    <li class="nav"><a href = "team/main.html"> Final </a></li>
+    <li class="nav"><a href = "team/main.html"> Team </a></li>
   </nav>
   <p>website under construction</p> 
   <center>
