--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <li class="nav"><a href = "event/index.html"> Event </a></li>
     <li class="nav"><a href = "final.html"> Final </a></li>
     <li class="nav"><a href = "team/main.html"> Team </a></li>
+    <li class="nav"><a href = "entertainment/index.html"> Entertainment </a></li>
   </nav>
   <p>website under construction</p> 
   <center>
