--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li class="nav"><a href = "final.html"> Final </a></li>
     <li class="nav"><a href = "team/main.html"> Team </a></li>
     <li class="nav"><a href = "entertainment/index.html"> Entertainment </a></li>
+    <li class="nav"><a href = "store.html"> Store </a></li>
   </nav>
   <p>website under construction</p> 
   <center>
