--- a/store.html
+++ b/store.html
@@ -1,5 +1,13 @@
-<html>
 <body>
+<nav>
+  <li class = "nav"><a href = "index.html">Index</a></li>
+  <li class = "nav"><a href = "#a">Home</a></li>
+  <li class = "nav"><a href = "#b">Checkout</a></li>
+  </nav>
+<br>
+<br>
+<br>
+<div id = "a"> 
 <p>Search Bar:</p>
 
 
@@ -20,17 +28,50 @@
     </header>
   
   <div class="wrapper">
-    <div class = "item">One</div>
-    <div class = "item">Two</div>
-    <div class = "item">Three</div>
-    <div class = "item">Four</div>
-    <div class = "item">Five</div>
+    <div class = "item">
+      <img src = "https://www.sees.com/dw/image/v2/AATS_PRD/on/demandware.static/-/Sites-sees-catalog/default/dwbebf1692/images/mothers-day-spring/fruit-medallions-4746-candy-box-alt1.jpg?sw=600&sh=600" width = "99%"> <center> Fruit Medallions </center></div>
+    <div class = "item"> <img src = "https://www.sees.com/dw/image/v2/AATS_PRD/on/demandware.static/-/Sites-sees-catalog/default/dw101e1449/images/mothers-day-spring/chocolate-caramel-lollypops-9443-candy-box-alt2.jpg?sw=600&sh=600" width = "99%"> <center> Chocolate Caramel Lollypops </center> </div>
+    <div class = "item"><img src = "https://www.sees.com/dw/image/v2/AATS_PRD/on/demandware.static/-/Sites-sees-catalog/default/dw2783beb8/images/easter/jelly-beans-570-candy-box-alt1.jpg?sw=600&sh=600" width = "99%"> <center> Jelly Beans </center> </div>
+    <div class = "item"><img src = "https://www.sees.com/dw/image/v2/AATS_PRD/on/demandware.static/-/Sites-sees-catalog/default/dw205e5572/images/all-year/peanut-brittle-355-box-alt1.jpg?sw=600&sh=600" width = "99%"> <center> Peanut Brittle </center> </div>
+    <div class = "item"><img src = "https://www.sees.com/dw/image/v2/AATS_PRD/on/demandware.static/-/Sites-sees-catalog/default/dwdab451e8/images/all-year/toffeettes-316-container-alt1.jpg?sw=600&sh=600" width = "99%"> <center> Toffee-ettes </center> </div>
   </div>    
-</body>
-</html>
+  </div>
+  <br>
+  <br>
+  <div class = "body">
+  <div class = "Cart-Container"> 
+     <div class = "Header">
+       <h3 class = "Heading"> Shopping Cart </h3>
+       <h5 class = "Action">Remove All </h5> 
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+     <div class = "Cart-Items">
+       <div class = "image-box">
+       <img src = "https://www.sees.com/dw/image/v2/AATS_PRD/on/demandware.static/-/Sites-sees-catalog/default/dwbebf1692/images/mothers-day-spring/fruit-medallions-4746-candy-box-alt1.jpg?sw=600&sh=600" style = {{ height = "120px"}} />
+       </div>
+      <div class = "about">
+        <h1 class = "title">Fruit Medallions</h1>
+   </div>
+       <div class = "counter">
+         <div class = "btn">+</div>
+         <div class = "count">2</div>
+         <div class = "btn">-</div>
+       </div>
+       <div class = "prices">$8.75</div> 
+       <div class = "save"><u>Save for later</u></div>
+       <div class = "remove"><u>Remove</u></div>
+
+         <div class = "amount">
+       </div>
+    </div>
+  </div>
+ </body>
   
 <style>
-  * {
+* {
   box-sizing: border-box;
 }
 
@@ -92,6 +133,38 @@ input[type=submit] {
   color: #ffffff; 
 }
 
+nav {
+  list-style-type: none; 
+  position: fixed; 
+  left: 0; 
+  top: 0; 
+  transition: top 0.3s;
+}
+
+.nav {
+  display: inline; 
+  float: left; 
+  padding: 15px;
+  margin: 4px;
+}
+
+a {
+  text-decoration: none; 
+  color: #FE7F9C;
+  font-size: 120%;
+  font-family: Papyrus, fantasy;
+}
+
+a,
+a:after,
+a:before {
+  transition: all .5s;
+}
+
+a:hover {
+  color: #555;
+}
+
 .logo {
   display: flex;
   align-items: center;
@@ -139,10 +212,110 @@ button {
    font-size: 28px;
    font-family: Verdana, Sans Serif;
 }
+
+.body{
+ margin: 0;
+ padding: 0;
+ background: linear-gradient(to bottom right, #E3F0FF, #FAFCFF);
+ height: 100vh;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+
+.Cart-Container{
+ width: 70%;
+ height: 85%;
+ background-color: #ffffff;
+ border-radius: 20px;
+ box-shadow: 0px 25px 40px #1687d933;
+}
+
+.Header{
+ margin: auto;
+ width: 90%;
+ height: 15%;
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+}
+.Heading{
+ font-size: 20px;
+ font-family: ‘Open Sans’;
+ font-weight: 700;
+ color: #2F3841;
+}
+.Action{
+ font-size: 14px;
+ font-family: ‘Open Sans’;
+ font-weight: 600;
+ color: #E44C4C;
+ cursor: pointer;
+ border-bottom: 1px solid #E44C4C;
+}
+
+.Cart-Items{
+ margin: auto;
+ width: 90%;
+ height: 30%;
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+}
+.image-box{
+ width: 15%;
+ text-align: center;
+}
+.about{
+ height: 100%;
+}
+.title{
+ padding-top: 5px;
+ line-height: 10px;
+ font-size: 32px;
+ font-family: ‘Open Sans’;
+ font-weight: 800;
+ color: #202020;
+}
+.subtitle{
+ line-height: 10px;
+ font-size: 18px;
+ font-family: ‘Open Sans’;
+ font-weight: 600;
+ color: #909090;
+}
+
+.counter{
+ width: 15%;
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+}
+.btn{
+ width: 40px;
+ height: 40px;
+ border-radius: 50%;
+ background-color: #d9d9d9;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ font-size: 20px;
+ font-family: ‘Open Sans’;
+ font-weight: 900;
+ color: #202020;
+ cursor: pointer;
+}
+.count{
+ font-size: 20px;
+ font-family: ‘Open Sans’;
+ font-weight: 900;
+ color: #202020;
+}
   </style>
   
   <script>
-    function autocomplete(inp, arr) {
+   
+function autocomplete(inp, arr) {
   
   var currentFocus;
   
