--- a/entertainment/index.html
+++ b/entertainment/index.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="topnav" id="myTopnav">
-  <a href=".../index.html" class="active">Home</a>
+  <a href="../index.html" class="active">Home</a>
   <a href="#b">News</a>
   <a href="#c">Contact</a>
   <a href="#d">About</a>
