--- a/index.html
+++ b/index.html
@@ -60,28 +60,72 @@
       background-color: #DDA3B2;
     }
     
-    .hover-underline-animation {
-  display: inline-block;
-  position: relative;
-  color: #0087ca;
+    body {
+  margin: 0;
+  padding: 0;
+  background-color: grey;
 }
 
-.hover-underline-animation:after {
-  content: '';
-  position: absolute;
-  width: 100%;
-  transform: scaleX(0);
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: #0087ca;
-  transform-origin: bottom right;
-  transition: transform 0.25s ease-out;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  height: 100px;
 }
 
-.hover-underline-animation:hover:after {
-  transform: scaleX(1);
-  transform-origin: bottom left;
+li {
+  padding: 40px 16px;
+  display: table-cell;
+  text-align: center;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  font-size: 17px;
+  letter-spacing: 2.5px;
+}
+
+li a:hover {
+  -moz-transition: all .3s ease-in-out;
+  -webkit-transition: all .3s ease-in-out;
+  -ms-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+}
+
+
+/*Edit starts here*/
+li {
+  position:relative;
+}
+
+li::after {
+    content: '';
+    display: block;
+    width: 0;
+    position:absolute;
+    left:50%;
+    height: 2px;
+    background: #0077ff;
+    transition: cubic-bezier(.77,0,.18,1) 1s;
+}
+
+li:hover::after {
+    width: 80%;
+    left: 10%;
+}
+
+li {
+  transition: cubic-bezier(.77,0,.18,1) 1s;
+}
+
+li:hover {
+  background-color: tomato;
 }
 
   </style>
