--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   
   <body>
   <nav> 
-    <li class="nav" class = "hover-underline-animation"><a href ="index.html">Home</a></li>
-    <li class="nav" class = "hover-underline-animation"><a href = "noun.html"> Noun </a></li>
-    <li class="nav" class = "hover-underline-animation"><a href = "convince.html"> Convince Project </a></li>
-    <li class="nav" class = "hover-underline-animation"><a href = "food.html"> Food Site </a></li>
-    <li class="nav" class = "hover-underline-animation"><a href = "event/index.html"> Event </a></li>
-    <li class="nav" class = "hover-underline-animation"><a href = "final.html"> Final </a></li>
-    <li class="nav" class = "hover-underline-animation"><a href = "team/main.html"> Team </a></li>
-    <li class="nav" class = "hover-underline-animation"><a href = "entertainment/index.html"> Entertainment </a></li>
-    <li class="nav" class = "hover-underline-animation"><a href = "store.html"> Store </a></li>
+    <li class="nav"><a href ="index.html">Home</a></li>
+    <li class="nav"><a href = "noun.html"> Noun </a></li>
+    <li class="nav"><a href = "convince.html"> Convince Project </a></li>
+    <li class="nav"><a href = "food.html"> Food Site </a></li>
+    <li class="nav"><a href = "event/index.html"> Event </a></li>
+    <li class="nav"><a href = "final.html"> Final </a></li>
+    <li class="nav"><a href = "team/main.html"> Team </a></li>
+    <li class="nav"><a href = "entertainment/index.html"> Entertainment </a></li>
+    <li class="nav"><a href = "store.html"> Store </a></li>
   </nav>
   <center>
   <img src="Personal Artifact.png">
