--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   
   <body>
   <nav> 
+  <div class="topnav" id="myTopnav">
     <li class="nav"><a href ="index.html">Home</a></li>
     <li class="nav"><a href = "noun.html"> Noun </a></li>
     <li class="nav"><a href = "convince.html"> Convince Project </a></li>
@@ -16,6 +17,7 @@
     <li class="nav"><a href = "team/main.html"> Team </a></li>
     <li class="nav"><a href = "entertainment/index.html"> Entertainment </a></li>
     <li class="nav"><a href = "store.html"> Store </a></li>
+    </div>
   </nav>
   <br>
   <br>
@@ -130,4 +132,39 @@ li:hover {
   background-color: tomato;
 }
 
+    /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
   </style>
+
+<script>
+  /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
