--- a/food.html
+++ b/food.html
@@ -217,7 +217,7 @@
   white-space: nowrap;
 }
 
-nav {
+.topnav {
   list-style-type: none; 
   position: fixed; 
   background-color: #564256;
@@ -226,20 +226,20 @@ nav {
   top: 0; 
 }
 
-.nav {
+.topnav {
   display: inline; 
   float: left; 
   padding: 20px;
   margin: 4px;
 }
 
-a {
+.topnav a {
   text-decoration: none; 
   color: #56A3A6;
   font-size: 120%;
 }
 
-.nav:hover {
+.topnav a:hover {
   background-color: #DDA3B2;
 }
   
