--- a/food.html
+++ b/food.html
@@ -5,12 +5,12 @@
   <body>
     <div class = "topnav" id = "myTopnav">
     <nav>
-    <li class="nav" class = "active"><a href="index.html">Home</a></li>
-    <li class="nav"><a href = "#a"> Welcome </a></li>
-    <li class="nav"><a href = "#b"> Menu </a></li>
-    <li class="nav"><a href = "#e"> Directions </a></li>
-    <li class="nav"><a href = "#d"> Hours </a></li>
-    <li class="nav"><a href = "#f"> Specials </a></li>
+    <li class = "active"><a href="index.html">Home</a></li>
+    <li><a href = "#a"> Welcome </a></li>
+    <li><a href = "#b"> Menu </a></li>
+    <li><a href = "#e"> Directions </a></li>
+    <li><a href = "#d"> Hours </a></li>
+    <li><a href = "#f"> Specials </a></li>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
@@ -217,7 +217,7 @@
   white-space: nowrap;
 }
 
-.topnav {
+nav {
   list-style-type: none; 
   position: fixed; 
   background-color: #564256;
